--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -28,14 +28,19 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-	<build>
+<build>
 		<plugins>
+			<!-- Maven plugin for Project Management -->
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
 		</plugins>
 	</build>
+	
 
 </project>
