--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@
 sonar.projectKey=ci.demo
 sonar.projectName=CI:demo
 # Java sources
-
+sonar.host.url=http://127.0.0.1:9000
 sonar.sources=src/main/java
 # Compiled classes directory
 sonar.java.binaries=target/classes
